# AI-Smart-DesDiagPred

./: Makefile  README.md  pyproject.toml
PredDescDiag_experimental/: config.json  dataprep.ipynb  sales_descriptive_analysis.ipynb  sales_diagnostic_analysis.ipynb  sales_prediction_analysis.ipynb
app/: main.py  models.py  routes.py  services.py  utils.py
