[project]
name = "desdiagpred"
version = "0.1.0"
description = ""
authors = [
    {name = "Ankush Pandey",email = "ap539813@gmail.com"}
]
readme = "README.md"
requires-python = "==3.10.16"
dependencies = [
    "llvmlite (==0.44.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "ollama (>=0.4.7,<0.5.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "numpy (==2.1)",
    "statsmodels (>=0.14.4,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
